# AntDSB

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
gui/: CMakeLists.txt  CMakePresets.json
gui/src/: BotClient.cpp  BotClient.h  MainWindow.cpp  MainWindow.h  main_gui.cpp
proto/: bot.proto
src/: main.cpp
src/DiscordBot/: DiscordBot.cpp  DiscordBot.h  createCommand.cpp
src/api/: BotServiceImpl.cpp  BotServiceImpl.h  GrpcServer.cpp  GrpcServer.h
src/cli/: ConsoleControl.cpp  ConsoleControl.h  ConsoleLoop.cpp  ConsoleLoop.h
src/commands/: commands.cpp  commands.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/configParser/: configParser.cpp  configParser.h
src/discord/: BuiltInCommands.cpp  BuiltInCommands.h  CallbackRegistry.cpp  CallbackRegistry.h  CommandRegistry.cpp  CommandRegistry.h  DiscordBot.cpp  DiscordBot.h  DiscordBot_MessageLogging.cpp  DiscordBot_Queries.cpp  DiscordBot_VoiceLogging.cpp  DiscordCluster.h
src/discord/callbacks/: ApplicationCallback.cpp  ApplicationCallback.h  BuiltInCallbacks.cpp  BuiltInCallbacks.h
src/discord/commands/: BuiltInCommands.cpp  BuiltInCommands.h  CommandRegistry.h
src/discord/core/: DiscordBot.cpp  DiscordBot.h
src/discord/logging/: ApplicationLogger.cpp  ApplicationLogger.h  DiscordBot_MessageLogging.cpp  DiscordBot_Queries.cpp  DiscordBot_VoiceLogging.cpp  DiscordLogging.cpp  DiscordLogging.h
src/discord/tempvc/: TempVC.cpp  TempVC.h
src/discord/ui/: ApplicationUI.cpp  ApplicationUI.h
src/logger/: Logger.cpp  Logger.h
src/utils/: ThreadPool.tpp  ThreadUtils.h  TokenValidator.cpp  TokenValidator.h  thread_pool.cpp  thread_pool.h
